# whisper-rl

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-package.yml
docs/superpowers/plans/: 2026-06-30-per-language-sft-weighting.md
docs/superpowers/specs/: 2026-06-30-per-language-sft-weighting-design.md
scripts/: daily_cv.sh
src/template/: config.py  lightning_module.py
src/template/datasets/: __init__.py
src/template/scripts/: train.py
src/whisper_rl/: __init__.py  cards.py  config.py  grpo.py  languages.py  lightning_module.py  metrics.py  rewards.py
src/whisper_rl/datasets/: __init__.py
src/whisper_rl/modeling/: __init__.py
src/whisper_rl/scripts/: download_cv.py  ingest_cv.py  train.py  upload_card.py
tests/: test_cards.py  test_config.py  test_datasets.py  test_download_cv.py  test_grpo.py  test_ingest_cv.py  test_languages.py  test_metrics.py  test_modeling.py  test_rewards.py  test_sample.py  test_train.py
